[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"
smoltcp = "0.11.0"
arrayvec = "0.7.4"
bytes = "1"
ctrlc = { version = "3.0", features = ["termination"]}
rpkt-time = {path = "../rpkt-time", package = "rpkt-time"}
rpkt-dpdk = {path = "../rpkt-dpdk", package = "rpkt-dpdk", features = ["multiseg"]}
rpkt = {path = "../rpkt", package = "rpkt"}

[[bench]]
name = "cursor_parse"
path = "dpdk/cursor_parse.rs"
harness = false

[[bench]]
name = "cursor_fwd"
path = "dpdk/cursor_fwd.rs"
harness = false

[[bench]]
name = "smol_parse"
path = "dpdk/smol_parse.rs"
harness = false

[[bench]]
name = "smol_fwd"
path = "dpdk/smol_fwd.rs"
harness = false