[package]
name = "benches"
workspace = ".."
repository.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dev-dependencies]
criterion = "0.5"
smoltcp = "0.12"
arrayvec = "0.7"
pnet = "0.35"
rpkt = {path = "../rpkt", package = "rpkt"}

[[bench]]
name = "smol_parse"
path = "smol/smol_parse.rs"
harness = false

[[bench]]
name = "smol_build"
path = "smol/smol_build.rs"
harness = false

[[bench]]
name = "rpkt_parse"
path = "rpkt/rpkt_parse.rs"
harness = false

[[bench]]
name = "rpkt_parse_cursor"
path = "rpkt/rpkt_parse_cursor.rs"
harness = false

[[bench]]
name = "rpkt_build"
path = "rpkt/rpkt_build.rs"
harness = false

[[bench]]
name = "pnet_parse"
path = "libpnet/pnet_parse.rs"
harness = false

[[bench]]
name = "pnet_build"
path = "libpnet/pnet_build.rs"
harness = false