[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
criterion = "0.5.1"
smoltcp = "0.8.2"
arrayvec = "0.7.2"
ctrlc = { version = "3.0", features = ["termination"]}
rpkt-dpdk = {path = "../rpkt-dpdk", package = "rpkt-dpdk"}
rpkt = {path = "../rpkt", package = "rpkt"}


[[example]]
name = "port_test"
path = "dpdk/port_test.rs"

[[example]]
name = "tx_test"
path = "dpdk/tx_test.rs"

[[example]]
name = "tx_slow"
path = "dpdk/tx_slow.rs"

[[example]]
name = "tx_multiseg_slow"
path = "dpdk/tx_multiseg_slow.rs"

[[example]]
name = "rx_test"
path = "dpdk/rx_test.rs"

[[example]]
name = "rx_print"
path = "dpdk/rx_print.rs"

[[example]]
name = "rx_multiseg_print"
path = "dpdk/rx_multiseg_print.rs"

[[example]]
name = "smoltcp_send_test"
path = "dpdk/smoltcp_send_test.rs"

[[example]]
name = "mbuf_test"
path = "dpdk/mbuf_test.rs"

[[example]]
name = "traffic_gen"
path = "dpdk/traffic_gen.rs"

[[example]]
name = "traffic_fwd"
path = "dpdk/traffic_fwd.rs"

[[example]]
name = "smol_traffic_fwd"
path = "dpdk/smol_traffic_fwd.rs"
