[package]
name = "pktfmt"
description = "a source-to-source compiler for network protocols"
keywords = ["network-packet", "packet-parser", "network-protocols"]
categories = ["network-programming"]

workspace = ".."
repository.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.20", features = ["lexer", "unicode"] }
quick-error = "2.0.1"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
byteorder = "1"

[[bin]]
name = "pktfmt"
path = "bin/pktfmt.rs"