[package]
name = "rpkt-dpdk-sys"
keywords = ["dpdk", "ffi"]
categories = ["network-programming"]

workspace = ".."
repository.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[build-dependencies]
bindgen = "0.59" 
cc = "1"
