[package]
name = "rpkt-dpdk-sys"
description = "do not use this crate, use rpkt-dpdk instead"
keywords = ["dpdk", "ffi"]
categories = ["network-programming"]

workspace = ".."
repository.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[build-dependencies]
version-compare = "0.1.1"
bindgen = "0.69.4"
cc = "1"
