[package]
name = "rpkt-dpdk"
description = "a safe FFI library for DPDK"
keywords = ["dpdk"]
categories = ["network-programming"]

workspace = ".."
repository.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
libc = "0.2"
arrayvec = "0.7.2"
once_cell = "1.9.0"
run-dpdk-sys = { path = "../rpkt-dpdk-sys", package = "rpkt-dpdk-sys", version = "0.1.0"}
run-packet = {path = "../rpkt", package = "rpkt", optional = true, version = "0.1.0"}

[features]
# `multiseg` feature enables non-contiguous `Mbuf` and `Pbuf`
# default = ["multiseg"]
multiseg = ["dep:run-packet"]

[dev-dependencies]
run-time = {path = "../rpkt-time", package = "rpkt-time"}
run-packet = {path = "../rpkt", package = "rpkt"}
ctrlc = { version = "3.0", features = ["termination"]}
smoltcp = "0.8"

[[example]]
name = "jumboframe_tx"
required-features = ["multiseg"]

[[example]]
name = "jumboframe_rx"
required-features = ["multiseg"]