[package]
name = "rpkt-dpdk"
description = "a safe FFI library for DPDK"
keywords = ["dpdk"]
categories = ["network-programming"]

workspace = ".."
repository.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
libc = "0.2"
arrayvec = "0.7.4"
once_cell = "1.9.0"
rpkt = {path = "../rpkt", package = "rpkt", optional = true, version = "0.1.0"}

[build-dependencies]
version-compare = "0.1.1"
bindgen = "0.69.4"
cc = "1"

[profile.release]
lto = "fat"

[features]
# `multiseg` feature enables non-contiguous `Mbuf` and `Pbuf`
# default = ["multiseg"]
multiseg = ["dep:rpkt"]

[dev-dependencies]
rpkt = {path = "../rpkt", package = "rpkt"}
ctrlc = { version = "3.0", features = ["termination"]}
smoltcp = "0.8.2"

[[example]]
name = "jumboframe_tx"
required-features = ["multiseg"]

[[example]]
name = "jumboframe_rx"
required-features = ["multiseg"]
