[package]
name = "rpkt"
description = "efficient and generic network packet manipulation for rust"
keywords = ["network-packet", "packet-parser", "network-protocols"]
categories = ["network-programming"]

workspace = ".."
repository.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
byteorder = "1"
bytes = "1"
smoltcp = "0.8.2"

[dev-dependencies]
smoltcp = "0.8.2"
pnet = "0.34.0"