[package]
name = "run-dpdk"
version = "0.2.0"
edition = "2018"

[dependencies]
libc = "0.2"
arrayvec = "0.7.2"
once_cell = "1.9.0"
run-dpdk-sys = { path = "../run-dpdk-sys", package = "run-dpdk-sys"}
run-packet = {path = "../run-packet", package = "run-packet", optional = true}

[features]
# `multiseg` feature enables non-contiguous `Mbuf` and `Pbuf`
# default = ["multiseg"]
multiseg = ["dep:run-packet"]

[dev-dependencies]
run-time = {path = "../run-time", package = "run-time"}
run-packet = {path = "../run-packet", package = "run-packet"}
ctrlc = { version = "3.0", features = ["termination"]}
smoltcp = "0.8"

[[example]]
name = "jumboframe_tx"
required-features = ["multiseg"]

[[example]]
name = "jumboframe_rx"
required-features = ["multiseg"]